--- a/src/App.css
+++ b/src/App.css
@@ -695,13 +695,10 @@ html {
 .title-layout-pad {
   padding: 8px 0px 12px 0px;
 }
-.img-origami {
- width: 300px;
-}
 
 .origami-grid-layout {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 3fr;
 }
 
 .middle-text {
