--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 }
 
 /*-----------------------------------------------THEMES-----------------------------------------------*/
-.color-theme-day {
+.color-theme-light {
   --color-background-1: #6694cc;
   --color-background-2: #c4edf7;
   --color-background-3: #f7f7f7;
@@ -66,7 +66,7 @@
   --contrast2: #ffffff;
 }
 
-.color-theme-night {
+.color-theme-dark {
   --color-background-1: #19304d;
   --color-background-2: #0e5567;
   --color-background-3: #1e1e24;
