--- a/src/App.css
+++ b/src/App.css
@@ -736,6 +736,10 @@ html {
   grid-column: 1/6;
 }
 
+.gallery-image-container {
+  margin: 0px 10px;
+}
+
 .gallery-image {
   border: 3px ridge var(--background-polar);
   border-radius: 3px;
