--- a/src/App.css
+++ b/src/App.css
@@ -796,7 +796,7 @@ html {
 }
 
 .gallery-image {
-  width: 30vw;
+  width: 33vw;
   border: 2.5vmin ridge var(--background-polar);
   border-radius: 3px;
   cursor: pointer;
@@ -806,17 +806,22 @@ html {
 }
 
 .gallery-image-select {
-  position: absolute;
+  --areaHeight: calc(100vh - var(--below-header) + 10px);
+  position: fixed;
+  width: 100vw;
+  height: var(--areaHeight);
   z-index: 1;
-  top: calc(var(--below-header) + 65px);
-  width: 93.6%;
-  margin: 0px 10px 10px 10px;
+  top: calc(var(--below-header) - 10px);
+  left: 0px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  background-color: #00000080;
 }
 
 .gallery-image-select > img {
-  width: 86%;
+  /* height: calc(var(--areaHeight) - 15vmin); */
+  width: 33vw;
 }
 
 .artpage-gallery-row {
