--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@
 .app-nav {
   padding: 8px 0px;
   font-size: .9em;
+  color: var(--font-color-1);
   align-items: center;
   flex-wrap: nowrap;
   height: var(--nav-height);
@@ -124,7 +125,7 @@
   padding: 3px 5px;
 }
 
-.nav-menu-style > div {
+.nav-menu > div {
   z-index: -1;
   position: absolute;
   display: grid;
@@ -134,13 +135,13 @@
 }
 
 .menu-close > div {
-  top: -100%;
+  top: -1000%;
   transition: top var(--anim-rate) ease-in;
 }
 
 .menu-open > div {
   top: 99%;
-  transition: top var(--anim-rate) ease-out;
+  transition: top var(--anim-rate) cubic-bezier(0.0, .9, .9, 1.0);
 }
 
 .scroll-track-bar {
@@ -233,9 +234,10 @@
   border-bottom: 1.3px solid var(--color-gray);
 }
 
-.nav-menu-style > div {
+.nav-menu > div {
   background: var(--background-polar);
   border: 1.3px solid var(--color-gray);
+  width: 100px;
 }
 
 .container-first {
@@ -271,11 +273,11 @@ hr {
 }
 .nav-arrow.menu-close {
   transform: rotate(405deg);
-  transition: transform var(--anim-rate) ease-in-out;
+  transition: transform var(--anim-rate) ease-out;
 }
 .nav-arrow.menu-open {
   transform: rotate(45deg);
-  transition: transform var(--anim-rate) ease-in-out;
+  transition: transform var(--anim-rate) cubic-bezier(0.0, .9, .9, 1.0);
 }
 
 .arrow {
@@ -387,7 +389,7 @@ hr {
   position: relative;
   border-radius: 3px;
   height: 90%;
-  width: 35%;
+  width: 40%;
   background: var(--contrast2);
 }
 .theme-btn-light .theme-btn-slider {
