--- a/src/App.css
+++ b/src/App.css
@@ -499,12 +499,22 @@ hr {
   position: absolute;
   top: var(--below-header);
   height: max-content;
-  width: 50%;
-  padding: 2% 5% 5% 5%;
+  width: 90%;
+  padding: 3%;
   text-align: center;
   background: var(--color-background-3);
   border: 1.3px solid var(--button-dark-detail);
   color: var(--font-color-1);
+}
+
+.modal-button {
+  margin: 0px 10px;
+}
+
+@media(min-width: 768px) {
+  .modal-content {
+    width: max-content;
+  }
 }
 
 /*-----------------------------------------------POPUP-TEXT-----------------------------------------------*/
