--- a/src/App.css
+++ b/src/App.css
@@ -809,7 +809,7 @@ html {
   }
   #homepage .section-lists div {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 3fr;
   }
   .skills-list {
     margin-top: 10px;
@@ -846,9 +846,11 @@ html {
   top: calc(var(--below-header) - 10px);
   left: 0px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #00000080;
+  color: #ffffff;
+  background-color: #000000b3;
 }
 
 .artpage-gallery-row {
