--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,8 @@
   
   --like-btn-liked: #333333;
   
-  --color-shadow: #666666;
+  /* --color-shadow: #666666; */
+  --color-shadow: hsl(0, 0%, 18%);
   --color-header-detail-1: #103b70;
   --button-dark-detail: #000000;
 
@@ -232,7 +233,7 @@
 
 .app-nav {
   background: var(--background-polar);
-  background: linear-gradient(270deg, var(--color-gray) 0%, var(--background-polar) 10%, var(--background-polar) 90%, var(--color-gray) 100%);
+  background: linear-gradient(270deg, var(--color-shadow) 0%, var(--background-polar) 10%, var(--background-polar) 90%, var(--color-shadow) 100%);
   border-top: 8px solid var(--color-header-detail-1);
   border-bottom: 1.3px solid var(--color-gray);
 }
@@ -296,6 +297,14 @@ hr {
 }
 .arrow.up-arrow {
   transform: rotate(225deg);
+}
+.arrow.left-arrow {
+  transform: rotate(135deg);
+  left: 2px;
+}
+.arrow.right-arrow {
+  transform: rotate(-45deg);
+  right: 2px;
 }
 
 /*-----------------------------------------------LINK-STYLE-TEMPLATE-----------------------------------------------*/
@@ -575,12 +584,25 @@ hr {
   }
   .highlight-carBut {
     border: 1px ridge var(--button-dark-detail);
-    background-color: var(--color-shadow);
+    background-color: var(--color-gray);
+  }
+  .carousel-arrow {
+    top: 13px;
+    /* cursor: pointer; */
+  }
+  .carousel-control-panel {
+    border-width: 1.3px 0px 1.3px 0px;
+    border-style: solid;
+    border-color: var(--color-gray);
+    /* background: linear-gradient(270deg, var(--color-shadow) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, var(--color-shadow) 100%); */
+    padding: 10px 0px;
+    height: 40px;
   }
 }
 
 @media(hover: hover) and (pointer: fine) {
   .carBut-hover:hover {
+    cursor: pointer;
     position: relative;
     transform: translatey(-2.35px);
     padding: 3.75px 0px;
@@ -608,9 +630,9 @@ hr {
     width: 23vw;
   }
   .shadow-behind {
-    -moz-box-box-shadow: 0px 0px 2px .1px var(--color-shadow);
-    -webkit-box-shadow: 0px 0px 2px .1px var(--color-shadow);
-    box-shadow: 0px 0px 2px .1px var(--color-shadow);
+    -moz-box-box-shadow: 0px 0px 3px .1px var(--color-shadow);
+    -webkit-box-shadow: 0px 0px 3px .1px var(--color-shadow);
+    box-shadow: 0px 0px 3px .1px var(--color-shadow);
   }
 }
 
