--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 .color-theme-light {
   --color-background-1: #6694cc;
   --color-background-2: #c4edf7;
-  --color-background-3: #f7f7f7;
+  --color-background-3: #f5f5f5;
   
   --color-gray: #b5b5b5;
   --background-polar: #ffffff;
@@ -75,7 +75,7 @@
 .color-theme-dark {
   --color-background-1: #19304d;
   --color-background-2: #0e5567;
-  --color-background-3: #1e1e24;
+  --color-background-3: #1c1c21;
   
   --color-gray: #525252;
   --background-polar: #1a1a1a;
@@ -88,8 +88,7 @@
   
   --like-btn-liked: #333333;
   
-  /* --color-shadow: #666666; */
-  --color-shadow: hsl(0, 0%, 18%);
+  --color-shadow: #2e2e2e;
   --color-header-detail-1: #103b70;
   --button-dark-detail: #000000;
 
@@ -591,12 +590,12 @@ hr {
     /* cursor: pointer; */
   }
   .carousel-control-panel {
-    border-width: 1.3px 0px 1.3px 0px;
+    border-width: .5px 0px .5px 0px;
     border-style: solid;
     border-color: var(--color-gray);
-    /* background: linear-gradient(270deg, var(--color-shadow) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, var(--color-shadow) 100%); */
+    background: linear-gradient(270deg, var(--color-background-3) 0%, var(--background-polar) 30%, var(--background-polar) 70%, var(--color-background-3) 100%);
     padding: 10px 0px;
-    height: 40px;
+    height: 45px;
   }
 }
 
@@ -604,8 +603,8 @@ hr {
   .carBut-hover:hover {
     cursor: pointer;
     position: relative;
-    transform: translatey(-2.35px);
-    padding: 3.75px 0px;
+    transform: translatey(-1.6px);
+    padding: 4.6px 0px;
   }
 }
 
