scroll fix on page change

--- a/src/App.css
+++ b/src/App.css
@@ -631,9 +631,9 @@ hr {
 /*-----------------------------------------------INTERACTIVITY-----------------------------------------------*/
 
 /*-----------------------------------------------SCROLL-BEHAVIOR-----------------------------------------------*/
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 
 /*-----------------------------------------------HOVER-EFFECTS-----------------------------------------------*/
 @media(hover: hover) and (pointer: fine) {
