--- a/src/App.css
+++ b/src/App.css
@@ -412,6 +412,7 @@ hr {
   transform: translateX(100%);
   transition: var(--anim-rate) cubic-bezier(0, 0.1, 0.4, 1.2);
 }
+
 /*-----------------------------------------------CONTENT-STYLE-TEMPLATE-----------------------------------------------*/
 .container-first {
   margin-top: var(--below-header);
@@ -834,6 +835,22 @@ hr {
 
 .artpage-layout-width {
   grid-column: 1/6;
+}
+
+.artpage-layout-1 {
+  grid-column: 1;
+}
+.artpage-layout-2 {
+  grid-column: 2;
+}
+.artpage-layout-3 {
+  grid-column: 3;
+}
+.artpage-layout-4 {
+  grid-column: 4;
+}
+.artpage-layout-5 {
+  grid-column: 5;
 }
 
 .gallery-image {
