--- a/src/App.css
+++ b/src/App.css
@@ -632,7 +632,7 @@ hr {
 /*-----------------------------------------------INTERACTIVITY-----------------------------------------------*/
 
 /*-----------------------------------------------SCROLL-BEHAVIOR-----------------------------------------------*/
-/* html {
+/* #artpage.page-content {
   scroll-behavior: smooth;
 } */
 
