--- a/src/App.css
+++ b/src/App.css
@@ -237,9 +237,9 @@
 }
 
 .nav-menu > div {
+  /* use this for dropdown menu width */
   background: var(--background-polar);
   border: 1.3px solid var(--color-gray);
-  width: 100px;
 }
 
 .container-first {
@@ -466,7 +466,7 @@ hr {
   border-radius: 100%;
   position: relative;
   width: 180px;
-  padding: 2px;
+  padding: 10px;
   left: 50%;
   transform: translateX(-50%);
   -moz-box-shadow: 0 -1px 1px 1px var(--color-photo-detail-1);
