--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 /* COMPONENTS */
   /* LOADERS */
   /* MODALS */
+  /* CLOUDFORM */
   /* CAROUSELS */
 /* QUERIES */
   /* RESPONSIVITY */
@@ -526,6 +527,59 @@ hr {
   }
 }
 
+/*-----------------------------------------------CLOUDFORM-----------------------------------------------*/
+.cloud {
+  border-radius: 100px;
+}
+
+.rain {
+  border-radius: 30px 30px 0px 0px;
+  background: var(--color-background-3);
+}
+
+.drop {
+  border: 1px solid var(--color-gray);
+  padding: 5px;
+  border-radius: 100px;
+  -moz-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
+  -webkit-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
+  box-shadow: inset 10px 0px 15px -10px var(--color-gray);
+  transition: all 500ms linear;
+}
+
+.cloud-link-container {
+  display: flex;
+  justify-content: space-evenly;
+  white-space: nowrap;
+}
+
+.cloud-link-container > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+}
+
+@media(min-width: 768px) {
+  .cloud-link-container > div {
+    width: 60%;
+  }
+}
+
+@media(min-width: 442px) {
+  .cloud-link-container {
+    margin-left: 35px;
+  }
+}
+
+@media(hover: hover) and (pointer: fine) {
+  .drop:hover {
+    -moz-box-shadow: inset -10px 0px 15px -10px var(--color-gray);
+    -webkit-box-shadow: inset -10px 0px 15px -10px var(--color-gray);
+    box-shadow: inset -10px 0px 15px -10px var(--color-gray);
+  }
+}
+
 /*-----------------------------------------------CAROUSELS-----------------------------------------------*/
 .carousel-link-layout {
   display: flex;
@@ -693,8 +747,8 @@ hr {
 }
 
 .fade-left {
-  -moz-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
-  -webkit-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
+  -moz-box-shadow: inset 10px 0px 15px -10px var(--color-gray);
+  -webkit-box-shadow: inset 10px 0px 15px -10px var(--color-gray);
   box-shadow: inset 10px 0px 15px -10px var(--color-gray);
 }
 
