--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@
 
 /*-----------------------------------------------NAVIGATION-TEMPLATE-----------------------------------------------*/
 .app-nav {
-  padding: 8px 0px;
+  padding: 8px 10px;
   font-size: .9em;
   color: var(--font-color-1);
   align-items: center;
@@ -130,7 +130,7 @@
 }
 
 .nav-menu > div {
-  z-index: -1;
+  z-index: -2;
   position: absolute;
   display: grid;
   grid-gap: 15px;
@@ -191,6 +191,14 @@
   justify-content: space-evenly;
 }
 
+.flex-gap-1 {
+  gap: 5vw;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .flex-around-align {
   display: flex;
   justify-content: space-evenly;
@@ -219,6 +227,13 @@
   justify-content: center;
 }
 
+.flex-center-vert-align {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*-----------------------------------------------TEMPLATE-STYLE-----------------------------------------------*/
 
 /*-----------------------------------------------MAIN-COLORS-----------------------------------------------*/
@@ -233,7 +248,7 @@
 
 .app-nav {
   background: var(--background-polar);
-  background: linear-gradient(270deg, var(--color-shadow) 0%, var(--background-polar) 10%, var(--background-polar) 90%, var(--color-shadow) 100%);
+  background: linear-gradient(270deg, var(--color-shadow) -50%, var(--background-polar) 30%, var(--background-polar) 70%, var(--color-shadow) 150%);
   border-top: 8px solid var(--color-header-detail-1);
   border-bottom: 1.3px solid var(--color-gray);
 }
@@ -266,12 +281,12 @@ hr {
 
 /*-----------------------------------------------ARROWS-STYLE-TEMPLATE-----------------------------------------------*/
 .nav-arrow {
-  margin-left: 8px;
-  height: 5px;
-  width: 5px;
-  top: 5px;
+  margin-left: 10px;
+  height: 8px;
+  width: 8px;
+  top: 2.5px;
   position: relative;
-  border: 1.5px solid var(--font-color-1);
+  border: 1.6px solid var(--font-color-1);
   border-top: hidden;
   border-left: hidden;
 }
@@ -339,7 +354,7 @@ hr {
 }
 
 .overline {
-  border-top: 1.5px solid var(--color-gray);
+  border-top: 2px solid var(--color-gray);
 }
 
 .indent {
@@ -398,11 +413,12 @@ hr {
   align-items: center;
   background: var(--color-gray);
   border: 1px solid var(--color-shadow);
+  cursor: pointer;
 }
 .theme-btn-slider {
   position: relative;
-  border-radius: 5px;
-  height: 80%;
+  border-radius: 3px;
+  height: 70%;
   width: 40%;
   background: var(--contrast2);
 }
@@ -422,7 +438,6 @@ hr {
 
 .content-container {
   padding: 0vw 2vw;
-  padding-top: 1vh;
 }
 
 .page-content {
@@ -529,20 +544,16 @@ hr {
 }
 
 /*-----------------------------------------------POPOVERS-----------------------------------------------*/
-@media (min-width: 1252px) {
+@media (min-width: 768px) {
   .popover-parent {
     position: relative;
   }
   .popover {
     position: absolute;
     z-index: 1;
-    transform: translate(-3.33%, 0%);
-    /* width: 288.5px; */
-    width: 93.3%;
+    transform: translateY(-1.2px);
     padding: 10px;
-    background: var(--background-polar);
-    border: 1.2px solid var(--color-gray);
-    border-top: none;
+    border: 1.2px 1.2px 0px 1.2px solid var(--color-gray);
   }
 }
 
@@ -558,8 +569,8 @@ hr {
 
 .drop {
   border: 1px solid var(--color-gray);
-  padding: 5px;
-  border-radius: 100px;
+  padding: 5px 8px;
+  border-radius: 15px;
   -moz-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
   -webkit-box-shadow: inset 10px 0px 10px -5px var(--color-gray);
   box-shadow: inset 10px 0px 15px -10px var(--color-gray);
@@ -570,22 +581,25 @@ hr {
   display: flex;
   justify-content: space-evenly;
   white-space: nowrap;
+  margin: 0px 10px;
 }
 
 .cloud-link-container > div {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
   align-items: center;
   padding: 10px 0px;
 }
 
-@media(min-width: 768px) {
+@media(min-width: 500px) {
   .cloud-link-container > div {
-    width: 60%;
+    width: 80%;
   }
 }
 
-@media(min-width: 442px) {
+@media(min-width: 418px) {
   .cloud-link-container {
     margin-left: 35px;
   }
@@ -890,16 +904,23 @@ hr {
   #homepage-mid-5 {
     grid-column: 1 / 6;
   }
-  #homepage .section-lists div {
+  
+  .section-lists > div {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2.5fr;
   }
   .skills-list {
     margin-top: 10px;
     margin-left: 0px;
   }
   .project-highlight-margin {
-    margin-bottom: 0px;
+    margin: 0px;
+  }
+}
+
+@media(min-width: 1250px) {
+  .section-lists > div {
+    grid-template-columns: 350px 1fr;
   }
 }
 
